CANDLEPIN-796: Create ueber certificate generator
- Add x509 certificate builder
- Add Ueber certificate generator